--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,5 @@ kotlinSpringVersion=1.9.25
 springBootVersion=3.2.4
 dependencyManagementVersion=1.1.4
 applicationVersion=1.0-SNAPSHOT
+springCloudAwsVersion=3.2.1
+softwareAwsSdkBomVersion=2.21.20
